<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">星火</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_back">返回</string>
    <string name="request">请求中&#8230;</string>
    <string name="loading">加载中&#8230;</string>
    <string name="loading_img">图片上传中&#8230;</string>
    <string name="loading_tv">上传中&#8230;</string>
    <string name="not_network">网络未连接，请设置</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="cancel_exit">取消</string>
    <string name="confirm_exit">确定</string>
    <string name="no_use_sd_card">没有检测到SD卡</string>

    <!-- 四个底部按钮 -->
    <string name="home">首页</string>
    <string name="category">分类</string>
    <string name="cart">购物车</string>
    <string name="my">我的</string>

    <!-- 我的 -->
    <string name="my_name">星火商城</string>
    <string name="my_vip">普通会员</string>
    <string name="my_manage">账户管理、地址管理</string>
    <string name="my_notuser">登录/注册</string>
    <string name="my_attention1">0\n关注的商品</string>
    <string name="my_attention2">0\n关注的店铺</string>
    <string name="my_browser">0\n浏览的商品</string>
    <string name="my_order">我的订单</string>
    <string name="my_allorder">查看全部订单</string>

    <!-- 交易订单 -->
    <string name="waiting_payment">待付款</string>
    <string name="waiting_goods">待收货</string>
    <string name="waiting_evaluation">待评价</string>
    <string name="salesafter">退款/售后</string>

    <!-- 登录 -->
    <string name="login_account">账号</string>
    <string name="login_pwd">密码</string>
    <string name="login_account_hint">请输入登录账号</string>
    <string name="login_pwd_hint">请输入登录密码</string>
    <string name="login">登录</string>
    <string name="login_centre">登录中&#8230;</string>
    <string name="login_regist">手机快速注册</string>
    <string name="login_lostpwd">忘记密码</string>
    <string name="account_notnull">账号不可为空</string>
    <string name="pwd_notnull">账号不可为空</string>
    <string name="logininfo_error">登录信息错误、请重新登录</string>

    <!-- 注册 -->
    <string name="phone">请输入手机号码</string>
    <string name="regist">注册</string>
    <string name="regist_centre">注册中&#8230;</string>
    <string name="regist_agreement1">点击上面“注册”按钮，即表示你同意</string>
    <string name="regist_agreement2">用户服务协议</string>
    <string name="regist_authcode">请输入您的验证码</string>
    <string name="regist_countdown">60秒</string>
    <string name="regist_nickname">请输入昵称</string>
    <string name="regist_pwd">6~16位字母或者数字</string>
    <string name="regist_confirmpwd">请输入确认密码</string>
    <string name="phone_notnull">手机号码不可为空</string>
    <string name="phone_false">手机号码不正确</string>
    <string name="regist_success">注册成功</string>

    <!-- 个人信息 -->
    <string name="exit_title">退出账号</string>
    <string name="exit_msg">你确定要退出本账号？</string>

    <!-- 更换头像 -->
    <string name="change_icon">更换头像</string>
    <string name="change_icon_photo">用相册更换头像</string>
    <string name="change_icon_camera">用相机更换头像</string>

</resources>