<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_white"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <include layout="@layout/layout_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/regist_indicator1"
            android:layout_width="50dp"
            android:layout_height="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/shape_rect_overall3"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:id="@+id/regist_indicator2"
            android:layout_width="50dp"
            android:layout_height="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/shape_rect_overall3_gray"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:id="@+id/regist_indicator3"
            android:layout_width="50dp"
            android:layout_height="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/shape_rect_overall3_gray"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/regist_input_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp" >

            <ImageView
                android:id="@+id/regist_phone_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/phone" />

            <EditText
                android:id="@+id/regist_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/regist_phone_logo"
                android:background="@null"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/app_overall"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>

        <Button
            android:id="@+id/regist_regist"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/selector_shape_overall"
            android:text="@string/regist"
            android:textColor="@color/app_white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/regist_agreement1"
            android:textColor="@color/app_font_gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/regist_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/regist_agreement2"
            android:textColor="@color/app_overall"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/regist_input_authcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:visibility="gone" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp" >

            <ImageView
                android:id="@+id/regist_authcode_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/phone" />

            <EditText
                android:id="@+id/regist_authcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/regist_authcode_logo"
                android:background="@null"
                android:hint="@string/regist_authcode"
                android:inputType="phone"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/regist_countdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/regist_countdown"
                android:textColor="@color/app_overall"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/app_overall"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>

        <Button
            android:id="@+id/regist_confirm"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/selector_shape_overall"
            android:text="@string/confirm"
            android:textColor="@color/app_white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/regist_nicknamepwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:visibility="gone" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp" >

            <ImageView
                android:id="@+id/regist_nickname_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/phone" />

            <EditText
                android:id="@+id/regist_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/regist_nickname_logo"
                android:background="@null"
                android:hint="@string/regist_nickname"
                android:inputType="phone"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/app_overall"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp" >

            <ImageView
                android:id="@+id/regist_pwd_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/pwd_show" />

            <EditText
                android:id="@+id/regist_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/regist_pwd_logo"
                android:background="@null"
                android:hint="@string/regist_nickname"
                android:inputType="phone"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/regist_pwd_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/pwd_click_not" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/app_overall"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp" >

            <ImageView
                android:id="@+id/regist_confirmpwd_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/pwd_show" />

            <EditText
                android:id="@+id/regist_confirmpwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/regist_confirmpwd_logo"
                android:background="@null"
                android:hint="@string/regist_nickname"
                android:inputType="phone"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/regist_confirmpwd_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/pwd_click_not" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/app_overall"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>

        <Button
            android:id="@+id/regist_confirmregist"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/selector_shape_overall"
            android:text="@string/confirm"
            android:textColor="@color/app_white"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>